tests/failing/dbx_class.db
funct App() => {
   // This is fine
   return <div htmlClassName="greeting">Hello world!</div>
}